--- a/templates/g5_helium/custom/scss/main.css
+++ b/templates/g5_helium/custom/scss/main.css
@@ -53,6 +53,7 @@
 
 .material-icons-outlined {
     font-family: 'Material Icons Outlined';
+    font-size: 18px;
     font-weight: normal;
     font-style: normal;
     display: inline-block;
