--- a/templates/g5_helium/custom/scss/utilities.css
+++ b/templates/g5_helium/custom/scss/utilities.css
@@ -373,6 +373,7 @@
 
         .material-icons {
             @apply mr-3;
+            margin-top: 4px;
         }
 
         p {
